--- a/blankie.html
+++ b/blankie.html
@@ -11,7 +11,7 @@
 <body>
     <h1>da posts</h1>
     <div class="filter-container"><input type="text" class="filter" id="filter" placeholder="Filter posts"></div>
-    <div id="post-container">
+    <div id="posts-container">
 
     </div>
 
