--- a/blankie.html
+++ b/blankie.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>da posts</h1>
+    <h1>Posts written with shiny letters</h1>
     <div class="filter-container"><input type="text" class="filter" id="filter" placeholder="Filter posts"></div>
     <div id="posts-container">
 
